Send kafka records on tests concurrently (#3022)