@@ -28,6 +28,7 @@ import org.apache.kafka.clients.consumer.OffsetAndMetadata;
 import org.apache.kafka.clients.producer.KafkaProducer;
 import org.apache.kafka.clients.producer.ProducerConfig;
 import org.apache.kafka.clients.producer.ProducerRecord;
+import org.apache.kafka.clients.producer.RecordMetadata;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.serialization.IntegerDeserializer;
 import org.apache.kafka.common.serialization.IntegerSerializer;
@@ -38,6 +39,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 
 import io.smallrye.mutiny.Multi;
+import io.smallrye.mutiny.Uni;
 import io.smallrye.mutiny.subscription.Cancellable;
 import io.smallrye.reactive.messaging.kafka.CountKafkaCdiEvents;
 import io.smallrye.reactive.messaging.kafka.IncomingKafkaRecord;
@@ -298,20 +300,32 @@ public class ClientTestBase extends KafkaCompanionTestBase {
     }
 
     void sendMessages(int startIndex, int count, String broker) throws Exception {
-        sendMessages(IntStream.range(0, count).mapToObj(i -> new ProducerRecord<>(topic, 0, i, "Message " + i)), broker);
+        sendMessages(IntStream.range(startIndex, startIndex + count).mapToObj(i -> new ProducerRecord<>(topic, 0, i, "Message " + i)),
+                broker);
     }
 
     void sendMessages(Stream<? extends ProducerRecord<Integer, String>> records) throws Exception {
         Map<String, Object> configs = producerProps();
         ConfigurationCleaner.cleanupProducerConfiguration(configs);
         try (KafkaProducer<Integer, String> producer = new KafkaProducer<>(configs)) {
-            List<Future<?>> futures = records.map(producer::send).collect(Collectors.toList());
-
-            for (Future<?> future : futures) {
-                future.get(10, TimeUnit.SECONDS);
-            }
+            Uni.join().all(records.map(record -> sendUni(producer, record)).toList())
+                    .usingConcurrencyOf(10)
+                    .andCollectFailures()
+                    .await().atMost(Duration.ofSeconds(10));
             producer.flush();
         }
+    }
+
+    static Uni<RecordMetadata> sendUni(KafkaProducer<Integer, String> producer,
+            ProducerRecord<Integer, String> record) {
+        return Uni.createFrom().emitter(e -> producer.send(record,
+                (metadata, exception) -> {
+                    if (exception != null) {
+                        e.fail(exception);
+                    } else {
+                        e.complete(metadata);
+                    }
+                }));
     }
 
     void sendMessages(Stream<? extends ProducerRecord<Integer, String>> records, String broker) throws Exception {
